--- a/styles/home.scss
+++ b/styles/home.scss
@@ -89,3 +89,10 @@ body {
   padding: 0 10px;
   text-decoration: none;
 }
+
+.connection-list {
+  display: block;
+  float: right;
+  font-weight: bold;
+  padding: 20px 0;
+}
